deploy/k8s/base/tests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talos-tests
  labels:
    purpose: integration-testing
    app.kubernetes.io/part-of: talos
